# image-processor-pro

./: README.md  config.py  filters.py  main.py  pyproject.toml  pytest.ini  test_filters.py
core/: color_ops.py  config_models.py  operation_factory.py  operations.py
core/tests/: test_color_gray_hist.py  test_color_ops.py  test_hybrid_corrected_logic.py  test_hybrid_image.py  test_hybrid_ui_logic.py  test_page_switching.py  test_true_hybrid_perception.py
src/logic/: image_logic.py
src/tests/: test_filters.py  test_image_logic.py
ui/: canvas_view.py  clickable_image_label.py  histogram_panel.py  hybrid_mode.py  main_window.py  sidebar_controls.py  style.qss
workers/: thread_workers.py
