[project]
name = "image-processor-pro"
version = "0.1.0"
description = "Biomedical Engineering Image Processing Task"
authors = [
    { name = "Ahmed Shehab" }
]
requires-python = ">=3.12"

dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy<2.0.0",
    "pyqt6>=6.6.0,<6.9.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
